--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,8 +4,8 @@
       let-user="user"
       let-signOut="signOut"
     >
-      <h1>Hello {{user?.signInDetails?.loginId}}'s todos</h1>
-      <app-todos></app-todos>
+      <h1>Hello</h1>
+      <app-blog></app-blog>
       <button (click)="signOut()">Sign Out</button>
     </ng-template>
 </amplify-authenticator>
