--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,38 @@
-<amplify-authenticator>
-    <ng-template
-      amplifySlot="authenticated"
-      let-user="user"
-      let-signOut="signOut"
-    >
-      <h1>Hello</h1>
-      <app-blog></app-blog>
-      <button (click)="signOut()">Sign Out</button>
+<div class="app-root">
+  <amplify-authenticator>
+    <ng-template amplifySlot="header">
+      <div style="padding: var(--amplify-space-large); text-align: center">
+        <img
+          class="amplify-image"
+          alt="Amplify logo"
+          src="../assets/svg/blog-icon.svg"
+        />
+      </div>
     </ng-template>
-</amplify-authenticator>
+    <ng-template amplifySlot="footer">
+      <div style="padding: var(--amplify-space-large); text-align: center">
+        <p class="amplify-text" style="color: var(--amplify-colors-neutral-80)">
+          © All Rights Reserved
+        </p>
+      </div>
+    </ng-template>
+      <ng-template
+        amplifySlot="authenticated"
+        let-user="user"
+        let-signOut="signOut"
+      >
+        <nav class="navbar bg-body-tertiary">
+          <div class="container">
+            <div class="navbar-brand d-flex justify-content-center align-items-center" role="button" routerLink="/blog-list">
+              <p class="m-0 cp fw-bold">BLOG</p>
+            </div> 
+            <section class="d-flex gap-2">
+              <button (click)="navigateToCreate()">Create Post</button>
+              <button (click)="signOut()">Sign Out</button>  
+            </section>  
+          </div>
+        </nav>
+        <router-outlet></router-outlet>
+      </ng-template>
+  </amplify-authenticator>
+</div>
